[tool.poetry]
name = "llm-template"
version = "0.1.0"
description = ""
authors = ["so jungwoong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.7.1"
grpcio = "^1.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
